--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -1,17 +1,42 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.opusdev.foodcheck.SecondFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <TextView
-        android:id="@+id/SndFraTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/recipes_card_view"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:text="TextView" />
+        android:layout_gravity="center"
+        card_view:cardCornerRadius="4dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/recipes_img"
+                android:layout_width="match_parent"
+                android:layout_height="117dp"
+                android:src="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/recipes_label"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:text="TextView" />
+
+            <TextView
+                android:id="@+id/recipes_ingredientsTotal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
