--- a/app/src/main/res/layout/camera_layout.xml
+++ b/app/src/main/res/layout/camera_layout.xml
@@ -15,14 +15,32 @@
         android:id="@+id/innerRelativeLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" >
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="0dp">
+
         <Button
             android:id="@+id/camera_button"
-            android:text="Capture"
             android:layout_width="fill_parent"
             android:layout_height="50dp"
-            android:layout_margin="10dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             android:layout_gravity="bottom"
-            />
+            android:text="Capture" />
+
+        <!--<ProgressBar-->
+            <!--android:id="@+id/progressBar"-->
+            <!--style="?android:attr/progressBarStyleLarge"-->
+            <!--android:layout_width="175dp"-->
+            <!--android:layout_height="270dp"-->
+            <!--android:layout_alignParentStart="true"-->
+
+            <!--android:layout_alignParentEnd="true"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_marginStart="107dp"-->
+            <!--android:layout_marginEnd="102dp"-->
+            <!--android:layout_marginBottom="0dp"-->
+            <!--android:progressDrawable="@drawable/loading" />-->
     </RelativeLayout>
 </RelativeLayout>
