--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -7,7 +7,11 @@
     <TextureView
         android:id="@+id/texture_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_take_photo"
@@ -18,5 +22,7 @@
         android:layout_marginBottom="24dp"
         android:src="@drawable/ic_search_black_24dp"
         app:backgroundTint="@color/colorPrimary" />
+
+
 
 </RelativeLayout>
