Refactor Fragments and Tensorflow implementation
Changing Fragments and Tensorflow as to fix the bugs relating to the newer version of Android.

--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp" />
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_take_photo"
         android:layout_width="56dp"
         android:layout_height="56dp"
