--- a/app/src/main/res/layout/camera_fragement.xml
+++ b/app/src/main/res/layout/camera_fragement.xml
@@ -14,8 +14,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/camera2_fragment"
+    android:id="@+id/camera_fragment"
     android:background="@android:color/white">
+
+    <Button
+            android:text="Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button2"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="305dp"/>
 
     <com.opusdev.foodcheck.AutoFitTextureView
         android:id="@+id/texture"
@@ -28,18 +36,18 @@
         android:layout_marginTop="0dp"
         android:layout_marginBottom="0dp" />
 
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/floatingActionButton2"-->
-        <!--android:layout_width="113dp"-->
-        <!--android:layout_height="116dp"-->
-        <!--android:layout_alignStart="@+id/texture"-->
-        <!--android:layout_alignEnd="@+id/texture"-->
-        <!--android:layout_alignBottom="@+id/texture"-->
-        <!--android:layout_marginStart="293dp"-->
-        <!--android:layout_marginEnd="4dp"-->
-        <!--android:layout_marginBottom="0dp"-->
-        <!--android:clickable="true"-->
-        <!--app:backgroundTint="@color/cardview_shadow_start_color"-->
-        <!--app:srcCompat="@mipmap/ic_launcher_round" />-->
+    <!--    <android.support.design.widget.FloatingActionButton-->
+<!--        android:id="@+id/floatingActionButton2"-->
+<!--        android:layout_width="113dp"-->
+<!--        android:layout_height="116dp"-->
+<!--        android:layout_alignStart="@+id/texture"-->
+<!--        android:layout_alignEnd="@+id/texture"-->
+<!--        android:layout_alignBottom="@+id/texture"-->
+<!--        android:layout_marginStart="293dp"-->
+<!--        android:layout_marginEnd="4dp"-->
+<!--        android:layout_marginBottom="0dp"-->
+<!--        android:clickable="true"-->
+<!--        app:backgroundTint="@color/cardview_shadow_start_color"-->
+<!--        app:srcCompat="@mipmap/ic_launcher_round" />-->
 
 </RelativeLayout>
