--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -41,7 +41,7 @@
         <!--</LinearLayout>-->
     <!--</android.support.v7.widget.CardView>-->
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/searchBox"
         android:layout_width="match_parent"
         android:layout_height="54dp"
@@ -85,9 +85,9 @@
         </LinearLayout>
 
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rycycleBox"
         android:layout_width="match_parent"
         android:layout_height="680dp"
@@ -95,8 +95,8 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="51dp"
-        tools:context="com.opusdev.foodcheck.SecondFragment">
+        tools:context="com.opusdev.foodcheck.fragments.SearchFragment">
 
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
