--- a/app/src/main/res/layout/list_recipes_item.xml
+++ b/app/src/main/res/layout/list_recipes_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="220dp">
 
-    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/recipes_items"
         android:layout_width="match_parent"
@@ -46,6 +46,6 @@
                 android:layout_alignBottom="@+id/itemImage"
                 android:text="TextView" />
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
