--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -42,18 +42,19 @@
     <!--</android.support.v7.widget.CardView>-->
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/searchBox"
-        android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:layout_centerInParent="false"
-        android:layout_centerHorizontal="true">
+            android:id="@+id/searchBox"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_centerInParent="false"
+            android:layout_centerHorizontal="true"
+            app:cardElevation="5dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:focusable="true"
-            android:focusableInTouchMode="true">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:focusable="true"
+                android:focusableInTouchMode="true">
 
             <!--<EditText-->
             <!--android:id="@+id/searchBoxText"-->
@@ -65,22 +66,22 @@
             <!--app:layout_constraintTop_toTopOf="parent"></EditText>-->
 
             <com.opusdev.foodcheck.RecentAutoCompleteText
-                android:id="@+id/autoCompleteTextView"
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
-                android:layout_marginRight="60dp"
-                android:layout_weight="1"
-                android:text="Search Here" />
+                    android:id="@+id/autoCompleteTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Search Here"
+                    android:layout_marginStart="10dp"
+                    android:textSize="14sp"/>
 
             <ImageButton
-                android:id="@+id/searchBoxButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="-60dp"
-                android:contentDescription="SearchButton"
-                android:src="@drawable/ic_search_black_24dp"
-                tools:layout_editor_absoluteX="347dp"
-                tools:layout_editor_absoluteY="6dp" />
+                    android:id="@+id/searchBoxButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:contentDescription="SearchButton"
+                    android:src="@drawable/ic_search_black_24dp"
+                    tools:layout_editor_absoluteX="347dp"
+                    tools:layout_editor_absoluteY="6dp"/>
 
         </LinearLayout>
 
@@ -88,14 +89,14 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rycycleBox"
-        android:layout_width="match_parent"
-        android:layout_height="680dp"
-        android:layout_alignTop="@+id/searchBox"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="51dp"
-        tools:context="com.opusdev.foodcheck.fragments.SearchFragment">
+            android:id="@+id/recycleBox"
+            android:layout_width="match_parent"
+            android:layout_height="680dp"
+            android:layout_alignTop="@+id/searchBox"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="51dp"
+            tools:context="com.opusdev.foodcheck.fragments.Search">
 
     </androidx.recyclerview.widget.RecyclerView>
 
