--- a/app/src/main/res/layout/recipe_item_list.xml
+++ b/app/src/main/res/layout/recipe_item_list.xml
@@ -9,7 +9,7 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
-    tools:context="com.opusdev.foodcheck.fragments.RecipeItemFragment"
-    tools:listitem="@layout/fragment_recipeitem"/>
+    tools:context="com.opusdev.foodcheck.fragments.RecipeItem"
+    tools:listitem="@layout/recipe_item"/>
     <!--app:layoutManager="LinearLayoutManager"-->
 
